deps/v8/test/message/fail/modules-cycle3.out
*%(basename)s:5: SyntaxError: Detected cycle while resolving name 'a' in 'modules-skip-cycle3.mjs'
export {a as x} from "modules-skip-cycle3.mjs";
        ^^^^^^
SyntaxError: Detected cycle while resolving name 'a' in 'modules-skip-cycle3.mjs'

